feat(user): 사용자 레파지토리 추가

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
-  "singleQuote": true,
-  "tabWidth": 4,
-  "trailingComma": "all"
+    "singleQuote": true,
+    "printWidth": 200,
+    "tabWidth": 4,
+    "trailingComma": "all"
 }
